# TerraBystander

./: LICENSE  README.md  pyproject.toml
src/terra_bystander/: __init__.py  convert.py  lexer.py  main.py  model.py  parser.py
src/terra_bystander/comic/: __init__.py  model.py
src/terra_bystander/epub/: __init__.py  epub_generator.py  model.py
src/terra_bystander/epub/templates/: activity.jinja  avg.jinja  metadata.jinja  operator_info.jinja  operator_story.jinja  outline.jinja  style.css
src/terra_bystander/gamedata/: __init__.py  model.py  reader.py
src/terra_bystander/script/: __init__.py  model.py  parser.py
src/terra_bystander/txt/: __init__.py
template/: TerraBystander.typ  main.typ
