[project]
name = "TerraBystander"
version = "0.3.0"
description = "Generate eBook for Arknights stories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ebooklib>=0.19",
    "jinja2>=3.1.6",
]

[project.scripts]
main = "terra_bystander:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terra_bystander"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["I", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pyrefly]
project_includes = ["src/*"]
project_excludes = [
    "**/.[!/.]*",
    '**/*venv/**\*',
]
